[package]
name = "primus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
log = "0.4.27"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
uefi = { version = "0.35.0", features = ["logger", "panic_handler", "alloc"] }
